--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 					</div>
 					<div class='section--generate'>
 						<button id="button--refresh" class='button--refresh'><i class="fa fa-refresh"></i></button>
-						<div class="slide-container">
-							<div class='icon-min'></div>
+						<div class="slider-container">
+							<div id='slider-min' class='slider-icons'></div>
 							<input type="range" min="20" max="200" value="70" class="slider" id="range">
-							<div class='icon-max'></div>
+							<div id='slider-max' class='slider-icons'></div>
 						</div>
+					</div>
+					<div class='section--discription'>
+						<p>Choose sorting ...info...</p>
 					</div>
 				</div>
 			</div>
