fix(index): fix classes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<body>
 		<div class='content'>
 			<div class='title-container'>
-				<h1 class='selected'>Sorting</h1>
-				<h1>Pathfinding</h1>
+				<h1 class='algo-tab-open'>Sorting</h1>
+				<h1 class='algo-tab-closed'>Pathfinding</h1>
 			</div>
 			<div class='content-ui'>
 				<div class='graph-container' id='graph-container'></div>
