fix(index): fix tag

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</div>
 					</div>
 					<div class='section--discription'>
-						<p>Choose sorting ...info...</p>
+						<text id='discription'>Point at a sorting algorithm to know more!</text>
 					</div>
 				</div>
 			</div>
